RESOLVED FIXED40109
Web Inspector: a number of fixes that make InspectorController happy with null redirects.
https://bugs.webkit.org/show_bug.cgi?id=40109
Summary Web Inspector: a number of fixes that make InspectorController happy with nul...
Pavel Feldman
Reported 2010-06-03 02:07:29 PDT
There is a layout test that fails when dev extras are enabled: LayoutTests/http/tests/misc/will-send-request-returns-null-on-redirect.html. This case uncovered a set of problems I'd like to fix: 1. We should support null redirects (we will ignore them, but not crash) 2. We should make sure that inspector controller does not process network events when devextras are not enabled 3. We should make sure that DRT disables dev extras after the tests it enabled it for. Patch to follow.
Attachments
[PATCH] Proposed change. (7.71 KB, patch)
2010-06-03 02:14 PDT, Pavel Feldman
yurys: review+
Pavel Feldman
Comment 1 2010-06-03 02:14:29 PDT
Created attachment 57746 [details] [PATCH] Proposed change.
Pavel Feldman
Comment 2 2010-06-03 03:04:35 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/inspector/InspectorController.cpp M WebKitTools/ChangeLog M WebKitTools/DumpRenderTree/gtk/DumpRenderTree.cpp M WebKitTools/DumpRenderTree/mac/DumpRenderTree.mm M WebKitTools/DumpRenderTree/win/DumpRenderTree.cpp Committed r60618
Note You need to log in before you can comment on or make changes to this bug.