WebKitTools/DumpRenderTree/mac/DumpRenderTree.mm
@@ -1295,8 +1295,10 @@ static void runTest(const string& testPathOrURL)
     }
 
     // If developer extras enabled Web Inspector may have been open by the test.
-    if (shouldEnableDeveloperExtras(pathOrURL.c_str()))
+    if (shouldEnableDeveloperExtras(pathOrURL.c_str())) {
         gLayoutTestController->closeWebInspector();
+        gLayoutTestController->setDeveloperExtrasEnabled(false);
+    }
 
     resetWebViewToConsistentStateBeforeTesting();
 
