WebKitTools/DumpRenderTree/win/DumpRenderTree.cpp
@@ -969,8 +969,10 @@ static void runTest(const string& testPathOrURL)
         DispatchMessage(&msg);
     }
 
-    if (shouldEnableDeveloperExtras(pathOrURL.c_str()))
+    if (shouldEnableDeveloperExtras(pathOrURL.c_str())) {
         gLayoutTestController->closeWebInspector();
+        gLayoutTestController->setDeveloperExtrasEnabled(false);
+    }
 
     resetWebViewToConsistentStateBeforeTesting();
 
